update experiment record

--- a/FedAvg/grid_search.ipynb
+++ b/FedAvg/grid_search.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rounds = 10\n",
+    "rounds = 100\n",
     "C = [1, 0.5, 0.1]\n",
     "K = [12, 50, 100, 1000]\n",
     "E = [1,3,7]\n",
@@ -23,88 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "python E_FedProx.py --rounds 10 --k 12 --c 1 --e 1 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 12 --c 1 --e 1 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 12 --c 1 --e 3 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 12 --c 1 --e 3 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 12 --c 1 --e 7 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 12 --c 1 --e 7 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 50 --c 1 --e 1 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 50 --c 1 --e 1 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 50 --c 1 --e 3 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 50 --c 1 --e 3 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 50 --c 1 --e 7 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 50 --c 1 --e 7 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 100 --c 1 --e 1 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 100 --c 1 --e 1 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 100 --c 1 --e 3 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 100 --c 1 --e 3 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 100 --c 1 --e 7 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 100 --c 1 --e 7 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 1000 --c 1 --e 1 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 1000 --c 1 --e 1 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 1000 --c 1 --e 3 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 1000 --c 1 --e 3 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 1000 --c 1 --e 7 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 1000 --c 1 --e 7 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 12 --c 0.5 --e 1 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 12 --c 0.5 --e 1 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 12 --c 0.5 --e 3 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 12 --c 0.5 --e 3 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 12 --c 0.5 --e 7 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 12 --c 0.5 --e 7 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 50 --c 0.5 --e 1 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 50 --c 0.5 --e 1 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 50 --c 0.5 --e 3 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 50 --c 0.5 --e 3 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 50 --c 0.5 --e 7 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 50 --c 0.5 --e 7 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 100 --c 0.5 --e 1 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 100 --c 0.5 --e 1 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 100 --c 0.5 --e 3 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 100 --c 0.5 --e 3 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 100 --c 0.5 --e 7 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 100 --c 0.5 --e 7 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 1000 --c 0.5 --e 1 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 1000 --c 0.5 --e 1 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 1000 --c 0.5 --e 3 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 1000 --c 0.5 --e 3 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 1000 --c 0.5 --e 7 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 1000 --c 0.5 --e 7 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 12 --c 0.1 --e 1 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 12 --c 0.1 --e 1 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 12 --c 0.1 --e 3 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 12 --c 0.1 --e 3 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 12 --c 0.1 --e 7 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 12 --c 0.1 --e 7 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 50 --c 0.1 --e 1 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 50 --c 0.1 --e 1 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 50 --c 0.1 --e 3 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 50 --c 0.1 --e 3 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 50 --c 0.1 --e 7 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 50 --c 0.1 --e 7 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 100 --c 0.1 --e 1 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 100 --c 0.1 --e 1 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 100 --c 0.1 --e 3 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 100 --c 0.1 --e 3 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 100 --c 0.1 --e 7 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 100 --c 0.1 --e 7 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 1000 --c 0.1 --e 1 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 1000 --c 0.1 --e 1 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 1000 --c 0.1 --e 3 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 1000 --c 0.1 --e 3 --mu 0.0\n",
-      "python E_FedProx.py --rounds 10 --k 1000 --c 0.1 --e 7 --mu 1.0\n",
-      "python E_FedProx.py --rounds 10 --k 1000 --c 0.1 --e 7 --mu 0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
@@ -117,13 +38,13 @@
     "for c_ in C:\n",
     "    for k_ in K:\n",
     "        for e_ in E:\n",
-    "            \n",
-    "            cmd = 'python E_FedProx.py --rounds '+str(rounds)+' --k '+str(k_)+' --c '+str(c_)+' --e '+str(e_)\n",
-    "    #         cmd = 'python E_FedProx.py -h'\n",
-    "            os.system(cmd)\n",
-    "#                 print(cmd)\n",
-    "            df_loc = max([os.path.join(directory,d) for d in os.listdir(directory)], key=os.path.getmtime)\n",
-    "            lis.append([c_, k_, rounds, e_, df_loc])"
+    "            for mu_ in mu:\n",
+    "                cmd = 'python E_FedProx.py --rounds '+str(rounds)+' --k '+str(k_)+' --c '+str(c_)+' --e '+str(e_)+' --mu '+str(mu_)\n",
+    "        #         cmd = 'python E_FedProx.py -h'\n",
+    "                os.system(cmd)\n",
+    "    #                 print(cmd)\n",
+    "                df_loc = max([os.path.join(directory,d) for d in os.listdir(directory)], key=os.path.getmtime)\n",
+    "                lis.append([c_, k_, rounds, e_, mu,  df_loc])"
    ]
   },
   {
@@ -145,7 +66,8 @@
     "df['K'] = to_list(a, 1)\n",
     "df['rounds'] = to_list(a, 2)\n",
     "df['epochs'] = to_list(a, 3)\n",
-    "df['df_loc'] = to_list(a, 4)\n",
+    "df['mu'] = to_list(a,4)\n",
+    "df['df_loc'] = to_list(a, 5)\n",
     "\n",
     "df.to_csv('grid_search/grid_search_'+timestr+'.csv', index=False)"
    ]
