--- a/testing_code/client_08faster.ipynb
+++ b/testing_code/client_08faster.ipynb
@@ -485,14 +485,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@tf.function\n",
-    "def train_step(x, y):\n",
-    "    with tf.GradientTape() as tape:\n",
-    "        logits = model(x, training=True)\n",
-    "        loss_value = loss_fn(y, logits)\n",
-    "    grads = tape.gradient(loss_value, model.trainable_weights)\n",
-    "    optimizer.apply_gradients(zip(grads, model.trainable_weights))\n",
-    "    return loss_value"
+    "# @tf.function\n",
+    "# def train_step(x, y):\n",
+    "#     with tf.GradientTape() as tape:\n",
+    "#         logits = model(x, training=True)\n",
+    "#         loss_value = loss_fn(y, logits)\n",
+    "#     grads = tape.gradient(loss_value, model.trainable_weights)\n",
+    "#     optimizer.apply_gradients(zip(grads, model.trainable_weights))\n",
+    "#     return loss_value"
    ]
   },
   {
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,14 +577,14 @@
     "    dataset = k.dataset\n",
     "    \n",
     "    \n",
-    "#     @tf.function\n",
-    "#     def train_step(x, y):\n",
-    "#         with tf.GradientTape() as tape:\n",
-    "#             logits = model(x, training=True)\n",
-    "#             loss_value = loss_fn(y, logits)\n",
-    "#         grads = tape.gradient(loss_value, model.trainable_weights)\n",
-    "#         optimizer.apply_gradients(zip(grads, model.trainable_weights))\n",
-    "#         return loss_value\n",
+    "    @tf.function\n",
+    "    def train_step(x, y):\n",
+    "        with tf.GradientTape() as tape:\n",
+    "            logits = model(x, training=True)\n",
+    "            loss_value = loss_fn(y, logits)\n",
+    "        grads = tape.gradient(loss_value, model.trainable_weights)\n",
+    "        optimizer.apply_gradients(zip(grads, model.trainable_weights))\n",
+    "        return loss_value\n",
     "\n",
     "#     grads = []\n",
     "    for epoch in range(epochs):\n",
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -645,7 +645,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86ed2b0ec3bb4922a9f60c7fc026af10",
+       "model_id": "5b2e7b0a67694a39b7c9ac8fb0922758",
        "version_major": 2,
        "version_minor": 0
       },
@@ -660,7 +660,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n",
+      "new avg weight is equal to Gmodel? >>> False\n"
      ]
     }
    ],
@@ -691,6 +750,16 @@
     "\n",
     "    # aggregate model\n",
     "    tmp = avg_weight(choice, Gmodel, client_list)\n",
+    "    \n",
+    "    for i in client_list:\n",
+    "        client_list[i] = k\n",
+    "        true_lis = []\n",
+    "        for num in range(len(tmp.trainable_variables)):\n",
+    "\n",
+    "            true_lis.append(np.array_equal(tmp.trainable_variables[num].numpy(),\n",
+    "                                 Gmodel.trainable_variables[num].numpy()))\n",
+    "        print('new avg weight is equal to Gmodel? >>>',all(true_lis))\n",
+    "    \n",
     "    Gmodel.set_weights(tmp.get_weights())\n",
     "\n",
     "    for i in client_list:\n",
@@ -700,21 +769,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---\n",
-      "Evaluate on Global test data on Gmodel\n",
-      "79/79 [==============================] - 0s 2ms/step - loss: 1.8518 - sparse_categorical_accuracy: 0.6107\n",
-      "test loss, test acc: [1.8517558574676514, 0.6107000112533569] \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"---\\nEvaluate on Global test data on Gmodel\")\n",
     "results = Gmodel.evaluate(X_test[:], y_test[:], batch_size=128)\n",
