repair client_train function

--- a/testing_code/client_09ux.ipynb
+++ b/testing_code/client_09ux.ipynb
@@ -544,13 +544,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@tf.function\n",
-    "def catch_grads(x, y):\n",
-    "    with tf.GradientTape() as tape:\n",
-    "        logits = model(x, training=False)\n",
-    "        loss_value = loss_fn(y, logits)\n",
-    "    grads = tape.gradient(loss_value, model.trainable_weights)\n",
-    "    return grads"
+    "# @tf.function\n",
+    "# def catch_grads(x, y):\n",
+    "#     with tf.GradientTape() as tape:\n",
+    "#         logits = model(x, training=False)\n",
+    "#         loss_value = loss_fn(y, logits)\n",
+    "#     grads = tape.gradient(loss_value, model.trainable_weights)\n",
+    "#     return grads"
    ]
   },
   {
